[tool.poetry]
name = "l33t"
version = "0.1.0"
description = "leet speak generator"
repository = "https://github.com/tz4678/l33t"
authors = ["Sergey M <tz4678@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"

[tool.poetry.scripts]
l33t = "l33t:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
